k8s/apps/maps/ciliumnetworkpolicy-update-apiserver-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: maps-update-apiserver-egress
  namespace: maps
spec:
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "6443"
              protocol: TCP
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/name: maps-update
