k8s/apps/maps/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    external-dns-cloudflare.alpha.kubernetes.io/cloudflare-proxied: "true"
  name: maps
  namespace: maps
spec:
  hostnames:
    - maps.walnuts.dev
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway-system
      sectionName: https
  rules:
    - backendRefs:
        - kind: Service
          name: maps-versatiles-server
          port: 80
          weight: 1
