k8s/apps/maps/network-policy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: maps-versatiles-server-ingress
  namespace: maps
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: envoy-gateway-system
          podSelector:
            matchLabels:
              app.kubernetes.io/component: proxy
              app.kubernetes.io/managed-by: envoy-gateway
              app.kubernetes.io/name: envoy
      ports:
        - port: 8080
          protocol: TCP
  podSelector:
    matchLabels:
      app: maps-versatiles-server
      app.kubernetes.io/name: maps-versatiles-server
  policyTypes:
    - Ingress
