k8s/apps/maps/network-policy-update-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: maps-update-egress
  namespace: maps
spec:
  egress:
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
      to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
    - ports:
        - port: 8333
          protocol: TCP
      to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: seaweedfs
          podSelector:
            matchLabels:
              app.kubernetes.io/component: s3
              app.kubernetes.io/instance: seaweedfs-default
              app.kubernetes.io/name: seaweedfs
    - ports:
        - port: 443
          protocol: TCP
      to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 0.0.0.0/8
              - 10.0.0.0/8
              - 100.64.0.0/10
              - 127.0.0.0/8
              - 169.254.0.0/16
              - 172.16.0.0/12
              - 192.0.0.0/24
              - 192.0.2.0/24
              - 192.168.0.0/16
              - 198.18.0.0/15
              - 198.51.100.0/24
              - 203.0.113.0/24
              - 224.0.0.0/4
              - 240.0.0.0/4
        - ipBlock:
            cidr: ::/0
            except:
              - ::/128
              - ::1/128
              - 64:ff9b::/96
              - 100::/64
              - 2001:db8::/32
              - fc00::/7
              - fe80::/10
              - ff00::/8
  podSelector:
    matchLabels:
      app: maps-update
      app.kubernetes.io/name: maps-update
  policyTypes:
    - Egress
